--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,17 +37,24 @@ jobs:
         docker run -d -p 80:80 --name cicd-flask-app-container malateshgp/cicd-flask-app:latest
 
   pylint:
-      runs-on: ubuntu-latest
-      
-      steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+          runs-on: ubuntu-latest
+          needs: build  # Add this line if you want the Pylint job to run after the build job
         
-      - name: Install pylint
-        run: pip install pylint
-      
-      - name: Run pylint
-        run: |
-          find . -name "*.py" | xargs pylint \
-          --disable=missing-docstring,invalid-name,unused-import \
-          --output-format=colorized
+          steps:
+          - name: Set up Python
+            uses: actions/setup-python@v2
+            with:
+              python-version: 3.x  # Specify the correct Python version
+        
+          - name: Checkout code
+            uses: actions/checkout@v2
+            
+          - name: Install pylint
+            run: pip install pylint
+          
+          - name: Run pylint
+            run: |
+              find . -name "*.py" | xargs pylint \
+              --disable=missing-docstring,invalid-name,unused-import \
+              --output-format=colorized
+        
